langflow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: langflow
  labels:
    app: langflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: langflow
  template:
    metadata:
      labels:
        app: langflow
    spec:
      # OpenShift requiere políticas de seguridad estrictas
      securityContext:
        fsGroup: 1000770000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: langflow
        image: langflowai/langflow:latest
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 1000770000
          runAsNonRoot: true
          capabilities:
            drop: ["ALL"]
          seccompProfile:
            type: RuntimeDefault
        ports:
        - containerPort: 7860
        volumeMounts:
        - name: langflow-data
          mountPath: "/app/langflow"
        - name: langflow-data
          mountPath: "/app/.venv/lib/python3.12/site-packages/langflow/alembic"
          subPath: "alembic"
        - name: langflow-data
          mountPath: "/.cache"
          subPath: "cache"
        - name: langflow-mount-dir
          mountPath: "/mnt"
      volumes:
      - name: langflow-data
        persistentVolumeClaim:
          claimName: langflow-data-pvc
      - name: langflow-mount-dir
        emptyDir: {}
